--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Creations de ThisIsHowVillainsAreMade</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a href="CalendrierDelAvent/calendirer.html">Calendrier de l'Avent</a>
